RESOLVED FIXED291973
WP that hosts <model> crashes if MP crashes several times in a row
https://bugs.webkit.org/show_bug.cgi?id=291973
Summary WP that hosts <model> crashes if MP crashes several times in a row
Aleksei Marchenko
Reported 2025-04-23 13:59:29 PDT
The crash happens in ModelProcessModelPlayerManager::modelProcessConnectionDidClose due to iterator validation failure: WTF::HashTableConstIterator<...>::checkValidity().
Attachments
Aleksei Marchenko
Comment 1 2025-04-23 14:08:43 PDT
Aleksei Marchenko
Comment 2 2025-04-23 14:09:02 PDT
EWS
Comment 3 2025-04-24 10:21:20 PDT
Committed 294071@main (e72e89897081): <https://commits.webkit.org/294071@main> Reviewed commits have been landed. Closing PR #44435 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.