Keep a copy of affected players while notifying abrupt rendering stop. https://bugs.webkit.org/show_bug.cgi?id=291973 rdar://149869888

Reviewed by Ada Chan.

Calling renderingAbruptlyStopped() may lead to a ModelPlayer creation
when model's auto-reload logic kicks in. Consecutively that leads to
m_players being changed while iterating over the HashMap.
Having a copy of currently affected players helps to mitigate that.

* Source/WebKit/WebProcess/Model/ModelProcessModelPlayerManager.cpp:
(WebKit::ModelProcessModelPlayerManager::modelProcessConnectionDidClose):

Canonical link: https://commits.webkit.org/294071@main